Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34925

Mariadb server 11.4.3-1-1 crashes on bootup in spider_sys_open_table

Details

    Description

      Version:    11.4.3-1-1
      Git commit: bc867a3910f81f9e9e22f88934ede02aa73229e3
      Built:      2024-09-09_14:29:49
      deleting tmpdir: /var/lib/mysql/.tmp
      creating empty tmpdir: /var/lib/mysql/.tmp
      created tmpdir: /var/lib/mysql/.tmp
      Database is already initialized and no start up scripts to run; Ready for start up.
      mysqld: Deprecated program name. It will be removed in a future release, use '/usr/sbin/mariadbd' instead
      2024-09-13 20:44:45 0 [Note] Starting MariaDB 11.4.3-MariaDB-log source revision 5ab81ffe0097a22a774957df28c5223cf0201de3 server_uid LTAk3Op17OkSzqTb1ieAMASILDg= as process 11
      2024-09-13 20:44:45 0 [Note] RocksDB: 2 column families found
      2024-09-13 20:44:45 0 [Note] RocksDB: Column Families at start:
      2024-09-13 20:44:45 0 [Note]   cf=default
      2024-09-13 20:44:45 0 [Note]     write_buffer_size=67108864
      2024-09-13 20:44:45 0 [Note]     target_file_size_base=67108864
      2024-09-13 20:44:45 0 [Note]   cf=__system__
      2024-09-13 20:44:45 0 [Note]     write_buffer_size=67108864
      2024-09-13 20:44:45 0 [Note]     target_file_size_base=67108864
      2024-09-13 20:44:45 0 [Note] RocksDB: Table_store: loaded DDL data for 0 tables
      2024-09-13 20:44:45 0 [Note] RocksDB: global statistics using get_sched_indexer_t indexer
      2024-09-13 20:44:45 0 [Note] MyRocks storage engine plugin has been successfully initialized.
      2024-09-13 20:44:45 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2024-09-13 20:44:45 0 [Note] InnoDB: Using transactional memory
      2024-09-13 20:44:45 0 [Note] InnoDB: Number of transaction pools: 1
      2024-09-13 20:44:45 0 [Note] InnoDB: Using crc32 + pclmulqdq instructions
      2024-09-13 20:44:45 0 [Note] InnoDB: Using liburing
      2024-09-13 20:44:45 0 [Note] InnoDB: Initializing buffer pool, total size = 3.608GiB, chunk size = 57.734MiB
      2024-09-13 20:44:45 0 [Note] InnoDB: Completed initialization of buffer pool
      2024-09-13 20:44:45 0 [Note] InnoDB: File system buffers for log disabled (block size=4096 bytes)
      2024-09-13 20:44:45 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=1522615139
      2024-09-13 20:44:47 0 [Note] InnoDB: End of log at LSN=1959473690
      2024-09-13 20:44:48 0 [Note] InnoDB: To recover: 41558 pages
      2024-09-13 20:44:48 0 [Note] InnoDB: Transaction 134295 was in the XA prepared state.
      2024-09-13 20:44:48 0 [Note] InnoDB: 1 transaction(s) which must be rolled back or cleaned up in total 0 row operations to undo
      2024-09-13 20:44:48 0 [Note] InnoDB: Trx id counter is 134440
      2024-09-13 20:44:48 0 [Note] InnoDB: Last binlog file './mariadb-bin.000006', position 529715286
      2024-09-13 20:44:48 0 [Note] InnoDB: Opened 3 undo tablespaces
      2024-09-13 20:44:48 0 [Note] InnoDB: 128 rollback segments in 3 undo tablespaces are active.
      2024-09-13 20:44:48 0 [Note] InnoDB: Starting in background the rollback of recovered transactions
      2024-09-13 20:44:48 0 [Note] InnoDB: Rollback of non-prepared transactions completed
      2024-09-13 20:44:48 0 [Note] InnoDB: Removed temporary tablespace data file: "./ibtmp1"
      2024-09-13 20:44:48 0 [Note] InnoDB: Setting file './ibtmp1' size to 12.000MiB. Physically writing the file full; Please wait ...
      2024-09-13 20:44:48 0 [Note] InnoDB: File './ibtmp1' size is now 12.000MiB.
      2024-09-13 20:44:48 0 [Note] InnoDB: log sequence number 1959473690; transaction id 134441
      2024-09-13 20:44:48 0 [Note] Plugin 'FEEDBACK' is disabled.
      2024-09-13 20:44:48 0 [Note] Plugin 'cracklib_password_check' is disabled.
      240913 20:44:48 server_audit: MariaDB Audit Plugin version 1.4.14 STARTED.
      2024-09-13 20:44:48 0 [Note] Plugin 'wsrep-provider' is disabled.
      2024-09-13 20:44:48 0 [Warning] 'innodb-change-buffering' was removed. It does nothing now and exists only for compatibility with old my.cnf files.
      2024-09-13 20:44:48 0 [Note] Recovering after a crash using mariadb-bin
      2024-09-13 20:44:48 0 [Note] Starting table crash recovery...
      2024-09-13 20:44:48 0 [Note] InnoDB: Starting recovery for XA transactions...
      2024-09-13 20:44:48 0 [Note] InnoDB: Transaction 134295 in prepared state after recovery
      2024-09-13 20:44:48 0 [Note] InnoDB: Transaction contains changes to 3 rows
      2024-09-13 20:44:48 0 [Note] InnoDB: 1 transactions in prepared state after recovery
      2024-09-13 20:44:48 0 [Note] Found 1 prepared transaction(s) in InnoDB
      2024-09-13 20:44:48 0 [Note] Crash table recovery finished.
      240913 20:44:49 [ERROR] mysqld got signal 11 ;
      Sorry, we probably made a mistake, and this is a bug.
       
      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 11.4.3-MariaDB-log source revision: 5ab81ffe0097a22a774957df28c5223cf0201de3
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=0
      max_threads=143
      thread_count=2
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 446040 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x0 thread_stack 0x49000
      addr2line: 'mysqld': No such file
      Printing to addr2line failed
      mysqld(my_print_stacktrace+0x2e)[0x5bf13b1ec76e]
      mysqld(handle_fatal_signal+0x475)[0x5bf13accf8c5]
      /lib64/libpthread.so.0(+0x12d20)[0x7817c2034d20]
      /usr/lib64/mysql/plugin/ha_spider.so(_Z21spider_sys_open_tableP3THDP10TABLE_LISTPP15start_new_trans+0x17)[0x7817bd857437]
      /usr/lib64/mysql/plugin/ha_spider.so(_Z21spider_open_sys_tableP3THDPKcibPP15start_new_transPi+0xe6)[0x7817bd8576a6]
      /usr/lib64/mysql/plugin/ha_spider.so(_Z32spider_internal_xa_commit_by_xidP3THDP21st_spider_transactionP5xid_t+0x144)[0x7817bd863734]
      /usr/lib64/mysql/plugin/ha_spider.so(_Z23spider_xa_commit_by_xidP10handlertonP5xid_t+0x3a)[0x7817bd866b9a]
      addr2line: 'mysqld': No such file
      mysqld(+0xad1a8d)[0x5bf13acd1a8d]
      mysqld(_Z24plugin_foreach_with_maskP3THDPFcS0_P13st_plugin_intPvEijS3_+0x17c)[0x5bf13aa6a51c]
      mysqld(+0xad07fb)[0x5bf13acd07fb]
      mysqld(my_hash_iterate+0x50)[0x5bf13b1cc8c0]
      mysqld(_Z19ha_recover_completeP7st_hashPSt4pairIjyE+0x2c)[0x5bf13acd574c]
      mysqld(_ZN16Recovery_context8completeEP13MYSQL_BIN_LOGR7st_hash+0x6a)[0x5bf13adeb2ba]
      mysqld(_ZN13MYSQL_BIN_LOG7recoverEP11st_log_infoPKcP11st_io_cacheP28Format_description_log_eventb+0x7e8)[0x5bf13adec328]
      mysqld(_ZN13MYSQL_BIN_LOG18do_binlog_recoveryEPKcb+0x310)[0x5bf13adec750]
      mysqld(_ZN13MYSQL_BIN_LOG4openEPKc+0x3a)[0x5bf13adef97a]
      mysqld(+0x746746)[0x5bf13a946746]
      mysqld(_Z11mysqld_mainiPPc+0x421)[0x5bf13a94bb31]
      /lib64/libc.so.6(__libc_start_main+0xe5)[0x7817c136b7e5]
      addr2line: 'mysqld': No such file
      mysqld(_start+0x2e)[0x5bf13a93f72e]
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mariadbd/ contains
      information that should help you find out what is causing the crash.
      Writing a core file...
      Working directory at /var/lib/mysql
      Resource Limits:
      Limit                     Soft Limit           Hard Limit           Units     
      Max cpu time              unlimited            unlimited            seconds   
      Max file size             unlimited            unlimited            bytes     
      Max data size             unlimited            unlimited            bytes     
      Max stack size            8388608              unlimited            bytes     
      Max core file size        unlimited            unlimited            bytes     
      Max resident set          unlimited            unlimited            bytes     
      Max processes             unlimited            unlimited            processes 
      Max open files            1048576              1048576              files     
      Max locked memory         8388608              8388608              bytes     
      Max address space         unlimited            unlimited            bytes     
      Max file locks            unlimited            unlimited            locks     
      Max pending signals       31777                31777                signals   
      Max msgqueue size         819200               819200               bytes     
      Max nice priority         0                    0                    
      Max realtime priority     0                    0                    
      Max realtime timeout      unlimited            unlimited            us        
      Core pattern: /core.%e.%p.%t
       
      Kernel version: Linux version 6.1.100+ (builder@e3602f4d156a) (Chromium OS 16.0_pre484197_p20230405-r10 clang version 16.0.0 (/var/tmp/portage/sys-devel/llvm-16.0_pre484197_p20230405-r10/work/llvm-16.0_pre484197_p20230405/clang 2916b99182752b1aece8cc4479d8d6a20b5e02da), LLD 16.0.0) #1 SMP PREEMPT_DYNAMIC Sat Aug 10 14:21:56 UTC 2024

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              filip.petrov.v Filip Petrov
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.