MDEV-34925 Fix segv on thd in spider xa recovery.