storage/spider/spd_trx.cc
@@ -2528,7 +2528,17 @@ int spider_internal_xa_commit_by_xid(
   SPIDER_Open_tables_backup open_tables_backup;
   bool table_xa_opened = FALSE;
   bool table_xa_member_opened = FALSE;
+  bool created_tmp_thd = FALSE;
   DBUG_ENTER("spider_internal_xa_commit_by_xid");
+  if (!thd)
+  {
+    if (!(thd = spider_create_tmp_thd()))
+    {
+      error_num = HA_ERR_OUT_OF_MEM;
+      goto error;
+    }
+    created_tmp_thd= TRUE;
+  }
   /*
     select
       status
@@ -2726,6 +2736,8 @@ xa_delete:
     goto error;
   spider_sys_close_table(thd, &open_tables_backup);
   table_xa_opened = FALSE;
+  if (created_tmp_thd)
+    spider_free_tmp_thd(thd);
   DBUG_RETURN(0);
 
 error:
@@ -2734,6 +2746,8 @@ error:
   if (table_xa_member_opened)
     spider_sys_close_table(thd, &open_tables_backup);
 error_open_table:
+  if (created_tmp_thd)
+    spider_free_tmp_thd(thd);
   DBUG_RETURN(error_num);
 }
 
@@ -2757,7 +2771,17 @@ int spider_internal_xa_rollback_by_xid(
   SPIDER_Open_tables_backup open_tables_backup;
   bool table_xa_opened = FALSE;
   bool table_xa_member_opened = FALSE;
+  bool created_tmp_thd= FALSE;
   DBUG_ENTER("spider_internal_xa_rollback_by_xid");
+  if (!thd)
+  {
+    if (!(thd = spider_create_tmp_thd()))
+    {
+      error_num = HA_ERR_OUT_OF_MEM;
+      goto error;
+    }
+    created_tmp_thd= TRUE;
+  }
   /*
     select
       status
@@ -2953,6 +2977,8 @@ xa_delete:
     goto error;
   spider_sys_close_table(thd, &open_tables_backup);
   table_xa_opened = FALSE;
+  if (created_tmp_thd)
+    spider_free_tmp_thd(thd);
   DBUG_RETURN(0);
 
 error:
@@ -2961,6 +2987,8 @@ error:
   if (table_xa_member_opened)
     spider_sys_close_table(thd, &open_tables_backup);
 error_open_table:
+  if (created_tmp_thd)
+    spider_free_tmp_thd(thd);
   DBUG_RETURN(error_num);
 }
 
@@ -3285,15 +3313,12 @@ int spider_xa_commit_by_xid(
   DBUG_ENTER("spider_xa_commit_by_xid");
 
   if (!(trx = spider_get_trx(thd, TRUE, &error_num)))
-    goto error_get_trx;
+    DBUG_RETURN(error_num);
 
-  if ((error_num = spider_internal_xa_commit_by_xid(thd, trx, xid)))
-    goto error;
+  error_num = spider_internal_xa_commit_by_xid(thd, trx, xid);
 
-  DBUG_RETURN(0);
-
-error:
-error_get_trx:
+  if (!thd)
+    spider_free_trx(trx, FALSE);
   DBUG_RETURN(error_num);
 }
 
@@ -3307,15 +3332,12 @@ int spider_xa_rollback_by_xid(
   DBUG_ENTER("spider_xa_rollback_by_xid");
 
   if (!(trx = spider_get_trx(thd, TRUE, &error_num)))
-    goto error_get_trx;
+    DBUG_RETURN(error_num);
 
-  if ((error_num = spider_internal_xa_rollback_by_xid(thd, trx, xid)))
-    goto error;
+  error_num = spider_internal_xa_rollback_by_xid(thd, trx, xid);
 
-  DBUG_RETURN(0);
-
-error:
-error_get_trx:
+  if (!thd)
+    spider_free_trx(trx, FALSE);
   DBUG_RETURN(error_num);
 }
 
